error spacing fix

--- a/sass/themes/payin/rednoseday/components/form/_form.scss
+++ b/sass/themes/payin/rednoseday/components/form/_form.scss
@@ -132,6 +132,9 @@ select {
       background-color: $colour-grey;
       color: $colour-deep-violet;
     }
+    .search-box.has-error & {
+      margin-top: 0;
+    }
   }
 }
 
